@@ -4,7 +4,7 @@
    ALMOST CERTAIN TO BE SUBJECT TO INCOMPATIBLE CHANGES OR DISAPPEAR
    COMPLETELY IN FUTURE GNU MP RELEASES.
 
-Copyright 2001, 2002, 2004, 2005 Free Software Foundation, Inc.
+Copyright 2001, 2002, 2004, 2005, 2012 Free Software Foundation, Inc.
 
 This file is part of the GNU MP Library.
 
@@ -75,8 +75,7 @@ mpz_aorsmul_1 (mpz_ptr w, mpz_srcptr x, mp_limb_t y, mp_size_t sub)
   if (wsize_signed == 0)
     {
       /* nothing to add to, just set x*y, "sub" gives the sign */
-      MPZ_REALLOC (w, xsize+1);
-      wp = PTR (w);
+      wp = MPZ_REALLOC (w, xsize+1);
       cy = mpn_mul_1 (wp, PTR(x), xsize, y);
       wp[xsize] = cy;
       xsize += (cy != 0);
@@ -88,8 +87,7 @@ mpz_aorsmul_1 (mpz_ptr w, mpz_srcptr x, mp_limb_t y, mp_size_t sub)
   wsize = ABS (wsize_signed);
 
   new_wsize = MAX (wsize, xsize);
-  MPZ_REALLOC (w, new_wsize+1);
-  wp = PTR (w);
+  wp = MPZ_REALLOC (w, new_wsize+1);
   xp = PTR (x);
   min_size = MIN (wsize, xsize);
 
